# skin_trader

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
config/: asgi.py  settings.py  urls.py  wsgi.py
skin_trader/: conftest.py
skin_trader/items/: models.py  urls.py  views.py
skin_trader/items/migrations/: 0001_initial.py
skin_trader/items/tests/: factories.py
skin_trader/items/tests/functional/: test_api_items.py
skin_trader/users/: serializers.py  urls.py  views.py
skin_trader/users/migrations/: 0001_initial.py
skin_trader/users/tests/: conftest.py  factories.py
skin_trader/users/tests/functional/: test_api.py  test_api_user.py
