[tool.poetry]
name = "skin_trader"
version = "0.1.0"
description = ""
authors = ["Kevin <kevin.abraham1688@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "3.12.1"
factory-boy = "3.1.0"
flake8 = "3.8.4"
wemake-python-styleguide = "0.14.1"
pytest-django = "4.1.0"
pytest-factoryboy = "2.0.3"
Django = "^3.1.3"
django-cors-headers = "^3.5.0"




[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
